Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.1.0.2100
----------
- Added "Increase text size" and "Decrease Text Size" for browser view.
- Changed key combination for "Cancel Refreshing" to control-command-s to make command-"-" available for text size.
- Added "Send Link" functionality for article view.
- Add address bar and refresh, back and forward buttons at the top of the browser web pages.
- Add -profile command line option to support custom profiles (needed for Portable Vienna).
- Added "Refresh Folder Images" command. (Code contributed by Jeffrey Johnson).
- Sort article list by multiple columns, saving the order in which columns were sorted. (Code contributed by Jeffrey Johnson).
- Added "Summary" field which shows the first part of the description.
- In condensed reading mode with the pane on the right, the headline fields can now be configured.
- Added "Filter By" to allow articles to be filtered in the article list by all, unread or date.
- Persist open tabs when Vienna exits and restore them when it restarts.
- Handles HTTP 410 to mark a feed as unsubscribed.
- Add button to Mark All Read the selected feeds.

2.0.4.2033
----------
- Parse entity characters in RSS article links.

2.0.3.2032
----------
- Minor article cache tweak and bug fixes.

2.0.3.2031
----------
- Completed Japanese localisation.
- Support Local File subscriptions in New Subscription sheet.
- Bug fixes.

2.0.2.2030
----------
- Completed Spanish localisation.

2.0.2.2029
----------
- Fix database performance issue introduced in 2026.

2.0.1.2028 (2.0.1 Release Build)
--------------------------------
- Updated localisation.

2.0.1.2027
----------
- For feeds that have no title and one cannot be synthesised, we now set the title to (No Title).
- Made click on the Growl notification work again. It broke when we moved to 0.7.4.